# OpenSEMBA

./: .Makefile.swp  .gitignore  .gitmodules  BCGroup.cpp  CMakeLists.txt  CMakeSettings.json  CVecI3Fractional.cpp  ClassBase.cpp  ClassBase.h  DynMatrix.hpp  Field.hpp  FunctionBase.cpp  FunctionLinearInterpolation.h  GroupBase.h  GroupBase.hpp  GroupWires.cpp  GroupWires.h  GroupWithIdBase.h  GroupWithIdBase.hpp  LICENSE  LocalAxes.cpp  Makefile  MathMatrix.h  MathMatrix.hpp  MathUtils.h  MathUtils.hpp  NFDEData.h  OpenfoamBoundary.cpp  OpenfoamBoundary.h  OutputOpenFoam.cpp  OutputOpenFoam.h  ParserOpenFoam.cpp  ParserOpenFoam.h  ProjectFile.cpp  ProjectFile.h  Semba.cpp  Semba.h  SimplexTet.h  SimplexTri.hpp  SmbData.cpp  (+5 more)
src/: CMakeLists.txt  GroupWires.cpp  GroupWires.h  ProjectFile.h  SmbData.cpp  SmbData.h
src/apps/: libopensemba.mk
src/apps/libopensemba/: libopensemba.mk
src/apps/opensemba/: opensemba.mk
src/apps/test/: CMakeLists.txt  ProjectFileTest.cpp  test.cpp  test.mk
src/base/class/: ClassBase.hpp  ClassGroupBase.hpp
src/base/error/: Error.h  ErrorFile.cpp  ErrorFile.h  ErrorNotImplemented.cpp
src/base/group/: GroupId.h
src/base/id/: Id.h  Id.hpp
src/base/sequence/: Array.h  Reference.h  Sequence.hpp  SequenceConstIterator.h  SequenceConstIterator.hpp  SequenceIterator.h  VectorPtr.hpp
src/core/: CMakeLists.txt  Data.cpp  Data.h  DataExtended.cpp  DataExtended.h  GroupWires.cpp  GroupWires.h  ProblemDescription.cpp  ProblemDescription.h  ProblemDescription.hpp  ProjectFile.cpp  ProjectFile.h  SmbData.h  Types.h
src/core/argument/: Argument.cpp  Argument.h  CMakeLists.txt  Formatter.cpp  Formatter.h  FormatterBase.h  Group.cpp  Group.h  Group.hpp  GroupBase.cpp  GroupBase.h  MultiOption.h  MultiPosition.h  MultiSwitch.cpp  MultiSwitch.h  MutuallyExclusiveGroup.cpp  MutuallyExclusiveGroup.h  Object.h  Object.hpp  Option.h  OptionBase.cpp  OptionBase.h  OptionValue.h  Parser.cpp  Parser.h  Position.h  PositionBase.h  StringParser.h  Switch.cpp  Switch.h  SwitchBase.h  Value.h  Value.hpp  ValueBase.cpp  ValueBase.h  ValueMulti.cpp  ValueMulti.h  ValueSingle.cpp  ValueSingle.h
src/core/boundary/: Boundary.cpp  Boundary.h  CMakeLists.txt
src/core/class/: CMakeLists.txt  Class.h  Cloneable.h  GroupIdentifiableUnique.h  GroupViewTools.h  Identifiable.h  Identifiable.hpp  Identification.h  Identification.hpp  Printable.h  Shareable.h
src/core/exporter/: CMakeLists.txt  Exporter.cpp  Exporter.h  GroupOutputs.cpp  GroupOutputs.h  GroupOutputs.hpp  Output.cpp  Output.h  Output.hpp  Result.cpp  Result.h  ResultGraph.cpp  ResultGraph.h  ResultRCS.cpp  ResultRCS.h
src/core/filesystem/: CMakeLists.txt  Chronometer.h  Project.cpp  Project.h
src/core/geometry/: Bound.h  BoundTerminations.h  BoundTerminations.hpp  Box.h  Box.hpp  CMakeLists.txt  Grid.h  Grid.hpp  Mesh.h  MeshUnstructured.cpp  MeshUnstructured.h
src/core/group/: CMakeLists.txt  Cloneable.h  Cloneable.hpp  Error.h  Group.h  Group.hpp  GroupIdentifiableUnique.h  GroupViewTools.h  Identifiable.h  Identifiable.hpp  IdentifiableUnique.h  Printable.h  Printable.hpp
src/core/math/: CMakeLists.txt  CVecI3Fractional.h  CartesianVector.h  Constants.h  DynMatrix.h  DynMatrix.hpp  Field.h  Field.hpp  Function.hpp  FunctionGaussian.cpp  FunctionLinearInterpolation.hpp  FunctionPolynomial.h  FunctionPolynomial.hpp  LocalAxes.cpp  LocalAxes.h  MathMatrix.h  Simplex.cpp  Simplex.h  SimplexLin.hpp  SimplexTet.hpp  SphericalVector.cpp  SphericalVector.h  StaMatrix.h  Types.h
src/core/model/: CMakeLists.txt  Model.cpp  Model.h  Model.hpp
src/core/options/: Arguments.cpp  OptionsMesher.cpp  OptionsMesher.h  OptionsSolver.cpp  OptionsSolver.h  OptionsSolverDGTD.h  OptionsSolverFDTD.cpp
src/core/outRq/: GroupOutRqs.h  OutRq.cpp  OutRq.h
src/core/outputRequest/: BulkCurrent.cpp  BulkCurrent.h  CMakeLists.txt  Domain.cpp  Domain.h  FarField.cpp  FarField.h  Group.h  Group.hpp  OnLayer.cpp  OnLayer.h  OnLine.cpp  OnLine.h  OnPoint.cpp  OnPoint.h  (+5 more)
src/exporter/: Exporter.h  Result.cpp  ResultGiD.cpp  ResultGiD.h  ResultGraph.cpp  ResultGraph.h  ResultRCS.cpp  ResultRCS.h
src/exporters/: CMakeLists.txt  Exporter.cpp  Exporter.h  GroupOutputs.h  GroupOutputs.hpp  Output.h  Output.hpp
src/geometry/: Box.h  Box.hpp  Grid.hpp  Mesh.cpp  MeshStructured.cpp  MeshStructured.h  MeshUnstructured.h
src/math/: CVecI3Fractional.cpp  CartesianVector.hpp  DynMatrix.h  Function.h  FunctionBase.cpp  FunctionBase.h  FunctionGaussian.h  FunctionPolynomial.h  LocalAxes.h  MathMatrix.h  MathMatrix.hpp  MathUtils.hpp  RealUtils.cpp  SimplexLin.h  SimplexLin.hpp  SimplexTet.h  SimplexTri.h  SphericalVector.h  StaMatrix.h  StaMatrix.hpp
src/mesher/: CMakeLists.txt  Options.cpp  Options.h
src/options/: Arguments.h  Options.cpp  Options.h  OptionsMesher.cpp  OptionsMesher.h  OptionsSolver.cpp  OptionsSolver.h  OptionsSolverDGTD.cpp  OptionsSolverDGTD.h  OptionsSolverFDTD.h
src/outRq/: Domain.cpp  Domain.h  GroupOutRqs.h  GroupOutRqs.hpp  OutRq.cpp  OutRq.h  OutRqBulkCurrent.cpp  OutRqBulkCurrent.h  OutRqFarField.h
src/parser/: Parser.cpp  Parser.h
src/parsers/: CMakeLists.txt  Parser.cpp  Parser.h
src/physicalModel/: GroupPhysicalModels.h  GroupPhysicalModels.hpp  PMMultiport.cpp  PMMultiport.h  PMMultiportPredefined.h  PMMultiportRLC.cpp  PMPEC.cpp  PMPMC.cpp  PMPMC.h  PMPredefined.cpp  PMPredefined.h  PMSMA.cpp  PMSMA.h  PMSurface.h  PMSurfaceMultilayer.h  PMSurfaceSIBC.cpp  PMSurfaceSIBC.h  PMVolume.h  PMVolumeAnisotropic.cpp  PMVolumeAnisotropic.h  PMVolumeAnisotropicCrystal.h  PMVolumeAnisotropicFerrite.cpp  PMVolumeAnisotropicFerrite.h  PMVolumeClassic.cpp  PMVolumeClassic.h  PMVolumeDispersive.h  PMVolumePML.cpp  PMWire.cpp  PMWire.h  PMWireExtremes.cpp  PMWireExtremes.h  PhysicalModel.cpp  PhysicalModel.h
src/solver/: CMakeLists.txt  Options.cpp  Options.h  Solver.cpp  Solver.h
src/sources/: Dipole.cpp  Dipole.h  EMSource.cpp  EMSource.h  EMSource.hpp  GroupEMSources.hpp  PlaneWave.cpp  PlaneWave.h
test/: CMakeLists.txt  test.cpp
test/core/: DataExtendedTest.cpp  ProblemDescriptionTest.cpp
(+1606 files in other folders)
